@@ -1,11 +1,14 @@
 package su.nightexpress.nightcore.util;
 
-import com.mojang.authlib.GameProfile;
-import com.mojang.authlib.properties.Property;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonParser;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.minimessage.MiniMessage;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.Tag;
 import org.bukkit.inventory.EquipmentSlot;
+import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.SkullMeta;
@@ -15,8 +18,9 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import su.nightexpress.nightcore.language.LangAssets;
 
-import java.lang.reflect.Method;
+import java.net.URI;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.function.Consumer;
 
@@ -27,15 +31,140 @@ public class ItemUtil {
     @NotNull
     public static String getItemName(@NotNull ItemStack item) {
         ItemMeta meta = item.getItemMeta();
-        return (meta == null || !meta.hasDisplayName()) ? LangAssets.get(item.getType()) : meta.getDisplayName();
+        if (meta != null) {
+            String name = getItemName(meta);
+            if (name != null) return name;
+        }
+
+        return LangAssets.get(item.getType());
+    }
+
+    @Nullable
+    public static String getItemName(@NotNull ItemMeta meta) {
+        if (Version.isAtLeast(Version.MC_1_21) && meta.hasItemName()) {
+            return meta.getItemName();
+        }
+        if (meta.hasDisplayName()) {
+            return meta.getDisplayName();
+        }
+
+        return null;
+    }
+
+    @NotNull
+    public static String getSerializedName(@NotNull ItemStack item) {
+        if (Version.isSpigot()) return getItemName(item);
+        if (!item.hasItemMeta()) return LangAssets.get(item.getType());
+
+        ItemMeta meta = item.getItemMeta();
+        if (meta != null) {
+            String name = getSerializedName(meta);
+            if (name != null) return name;
+        }
+
+        return LangAssets.get(item.getType());
+    }
+
+    @Nullable
+    public static String getSerializedName(@NotNull ItemMeta meta) {
+        if (Version.isAtLeast(Version.MC_1_21) && meta.hasItemName()) {
+            return getSerializedItemName(meta);
+        }
+
+        if (meta.hasDisplayName()) {
+            return getSerializedDisplayName(meta);
+        }
+
+        return null;
+    }
+
+    @Nullable
+    public static String getSerializedDisplayName(@NotNull ItemMeta meta) {
+        if (Version.isSpigot()) return getItemName(meta);
+
+        var displayName = meta.hasDisplayName() ? meta.displayName() : null;
+        return displayName == null ? null : MiniMessage.miniMessage().serialize(displayName);
+    }
+
+    @Nullable
+    public static String getSerializedItemName(@NotNull ItemMeta meta) {
+        if (Version.isSpigot()) return getItemName(meta);
+        if (Version.isBehind(Version.MC_1_21)) return null;
+
+        return meta.hasItemName() ? MiniMessage.miniMessage().serialize(meta.itemName()) : null;
+    }
+
+    @NotNull
+    public static List<String> getSerializedLore(@NotNull ItemStack item) {
+        if (!item.hasItemMeta()) return new ArrayList<>();
+
+        ItemMeta meta = item.getItemMeta();
+
+        return meta == null ? new ArrayList<>() : getSerializedLore(meta);
+    }
+
+    @NotNull
+    public static List<String> getSerializedLore(@NotNull ItemMeta meta) {
+        if (Version.isSpigot()) {
+            List<String> lore = meta.getLore();
+            return lore == null ? new ArrayList<>() : lore;
+        }
+
+        List<Component> lore = meta.lore();
+
+        return lore == null ? new ArrayList<>() : lore.stream().map(MiniMessage.miniMessage()::serialize).toList();
+    }
+
+    public static void setDisplayName(@NotNull ItemMeta meta, @NotNull String name) {
+        Version.software().setDisplayName(meta, name);
+    }
+
+    public static void setItemName(@NotNull ItemMeta meta, @NotNull String name) {
+        Version.software().setItemName(meta, name);
+    }
+
+    public static void setLore(@NotNull ItemMeta meta, @NotNull List<String> lore) {
+        Version.software().setLore(meta, lore);
     }
 
     public static void editMeta(@NotNull ItemStack item, @NotNull Consumer<ItemMeta> function) {
+        editMeta(item, ItemMeta.class, function);
+    }
+
+    public static <T extends ItemMeta> void editMeta(@NotNull ItemStack item, @NotNull Class<T> clazz, @NotNull Consumer<T> function) {
         ItemMeta meta = item.getItemMeta();
         if (meta == null) return;
+        if (!clazz.isAssignableFrom(meta.getClass())) return;
 
-        function.accept(meta);
-        item.setItemMeta(meta);
+        T specific = clazz.cast(meta);
+
+        function.accept(specific);
+        item.setItemMeta(specific);
+    }
+
+    public static void hideAttributes(@NotNull ItemStack itemStack) {
+        if (Version.isAtLeast(Version.MC_1_21_5)) {
+            Version.software().hideComponents(itemStack);
+            return;
+        }
+
+        editMeta(itemStack, meta -> hideAttributes(meta, itemStack.getType()));
+    }
+
+    private static void hideAttributes(@NotNull ItemMeta meta, @NotNull Material material) {
+        if (Version.isBehind(Version.MC_1_21_5) && Version.isAtLeast(Version.MC_1_20_6)) {
+            if (material.isItem()) {
+                EquipmentSlot slot = material.getEquipmentSlot();
+                material.getDefaultAttributeModifiers(slot).forEach((attribute, modifier) -> {
+                    var modifiers = meta.getAttributeModifiers() == null ? null : meta.getAttributeModifiers(attribute);
+                    if (modifiers == null || modifiers.isEmpty()) {
+                        meta.addAttributeModifier(attribute, modifier);
+                    }
+                });
+            }
+        }
+
+        meta.addItemFlags(ItemFlag.values());
     }
 
     @NotNull
@@ -59,10 +188,9 @@ public class ItemUtil {
         return item;
     }
 
-    public static void setHeadSkin(@NotNull ItemStack item, @NotNull String urlData) {
-        if (urlData.isBlank()) return;
-        if (item.getType() != Material.PLAYER_HEAD) return;
-        if (!(item.getItemMeta() instanceof SkullMeta meta)) return;
+    @Nullable
+    public static PlayerProfile createSkinProfile(@NotNull String urlData) {
+        if (urlData.isBlank()) return null;
 
         String name = urlData.substring(0, 16);
 
@@ -76,16 +204,23 @@ public class ItemUtil {
             // sometimes swtiching to "new" spigot api is a pain.
             // why the hell i have to dig into nms to learn that...
             PlayerProfile profile = Bukkit.createPlayerProfile(uuid, name);
-            URL url = new URL(urlData);
+            URL url = URI.create(urlData).toURL();//new URL(urlData);
             PlayerTextures textures = profile.getTextures();
+
             textures.setSkin(url);
             profile.setTextures(textures);
-            meta.setOwnerProfile(profile);
-            item.setItemMeta(meta);
+            return profile;
         }
         catch (Exception exception) {
             exception.printStackTrace();
+            return null;
         }
+    }
+
+    public static void setHeadSkin(@NotNull ItemStack item, @NotNull String urlData) {
+        editMeta(item, SkullMeta.class, meta -> {
+            meta.setOwnerProfile(createSkinProfile(urlData));
+        });
     }
 
     @Nullable
@@ -106,53 +241,19 @@ public class ItemUtil {
     @Deprecated
     public static void setSkullTexture(@NotNull ItemStack item, @NotNull String value) {
         if (item.getType() != Material.PLAYER_HEAD) return;
-        if (!(item.getItemMeta() instanceof SkullMeta meta)) return;
 
-        UUID uuid = UUID.nameUUIDFromBytes(value.getBytes());
-        GameProfile profile = new GameProfile(uuid, "null");
-        profile.getProperties().put("textures", new Property("textures", value));
+        try {
+            byte[] decoded = Base64.getDecoder().decode(value);
+            String decodedStr = new String(decoded, StandardCharsets.UTF_8);
+            JsonElement element = JsonParser.parseString(decodedStr);
 
-        Method method = Reflex.getMethod(meta.getClass(), "setProfile", GameProfile.class);
-        if (method != null) {
-            Reflex.invokeMethod(method, meta, profile);
+            String url = element.getAsJsonObject().getAsJsonObject("textures").getAsJsonObject("SKIN").get("url").getAsString();
+            url = url.substring(ItemUtil.TEXTURES_HOST.length());
+
+            setHeadSkin(item, url);
         }
-        else {
-            Reflex.setFieldValue(meta, "profile", profile);
-        }
-
-        item.setItemMeta(meta);
-    }
-
-    @Nullable
-    @Deprecated
-    public static String getSkullTexture(@NotNull ItemStack item) {
-        if (item.getType() != Material.PLAYER_HEAD) return null;
-
-        SkullMeta meta = (SkullMeta) item.getItemMeta();
-        if (meta == null) return null;
-
-        GameProfile profile = (GameProfile) Reflex.getFieldValue(meta, "profile");
-        if (profile == null) return null;
-
-        Collection<Property> properties = profile.getProperties().get("textures");
-        Optional<Property> opt = properties.stream().filter(prop -> {
-            String name;
-            if (Version.isAtLeast(Version.V1_20_R2)) {
-                name = prop.name();
-            }
-            else {
-                name = (String) Reflex.getFieldValue(profile, "name");
-            }
-            return name != null && name.equalsIgnoreCase("textures");
-        }).findFirst();
-
-        if (opt.isEmpty()) return null;
-
-        if (Version.isAtLeast(Version.V1_20_R2)) {
-            return opt.get().value();
-        }
-        else {
-            return (String) Reflex.getFieldValue(opt.get(), "value");
+        catch (Exception exception) {
+            exception.printStackTrace();
         }
     }
 
@@ -169,25 +270,11 @@ public class ItemUtil {
     }
 
     public static boolean isSword(@NotNull ItemStack item) {
-        if (Version.isAtLeast(Version.V1_19_R3)) {
-            return Tag.ITEMS_SWORDS.isTagged(item.getType());
-        }
-
-        Material material = item.getType();
-        return material == Material.DIAMOND_SWORD || material == Material.GOLDEN_SWORD
-            || material == Material.IRON_SWORD || material == Material.NETHERITE_SWORD
-            || material == Material.STONE_SWORD || material == Material.WOODEN_SWORD;
+        return Tag.ITEMS_SWORDS.isTagged(item.getType());
     }
 
     public static boolean isAxe(@NotNull ItemStack item) {
-        if (Version.isAtLeast(Version.V1_19_R3)) {
-            return Tag.ITEMS_AXES.isTagged(item.getType());
-        }
-
-        Material material = item.getType();
-        return material == Material.DIAMOND_AXE || material == Material.GOLDEN_AXE
-            || material == Material.IRON_AXE || material == Material.NETHERITE_AXE
-            || material == Material.STONE_AXE || material == Material.WOODEN_AXE;
+        return Tag.ITEMS_AXES.isTagged(item.getType());
     }
 
     public static boolean isTrident(@NotNull ItemStack item) {
@@ -195,36 +282,15 @@ public class ItemUtil {
     }
 
     public static boolean isPickaxe(@NotNull ItemStack item) {
-        if (Version.isAtLeast(Version.V1_19_R3)) {
-            return Tag.ITEMS_PICKAXES.isTagged(item.getType());
-        }
-
-        Material material = item.getType();
-        return material == Material.DIAMOND_PICKAXE || material == Material.GOLDEN_PICKAXE
-            || material == Material.IRON_PICKAXE || material == Material.NETHERITE_PICKAXE
-            || material == Material.STONE_PICKAXE || material == Material.WOODEN_PICKAXE;
+        return Tag.ITEMS_PICKAXES.isTagged(item.getType());
     }
 
     public static boolean isShovel(@NotNull ItemStack item) {
-        if (Version.isAtLeast(Version.V1_19_R3)) {
-            return Tag.ITEMS_SHOVELS.isTagged(item.getType());
-        }
-
-        Material material = item.getType();
-        return material == Material.DIAMOND_SHOVEL || material == Material.GOLDEN_SHOVEL
-            || material == Material.IRON_SHOVEL || material == Material.NETHERITE_SHOVEL
-            || material == Material.STONE_SHOVEL || material == Material.WOODEN_SHOVEL;
+        return Tag.ITEMS_SHOVELS.isTagged(item.getType());
     }
 
     public static boolean isHoe(@NotNull ItemStack item) {
-        if (Version.isAtLeast(Version.V1_19_R3)) {
-            return Tag.ITEMS_HOES.isTagged(item.getType());
-        }
-
-        Material material = item.getType();
-        return material == Material.DIAMOND_HOE || material == Material.GOLDEN_HOE
-            || material == Material.IRON_HOE || material == Material.NETHERITE_HOE
-            || material == Material.STONE_HOE || material == Material.WOODEN_HOE;
+        return Tag.ITEMS_HOES.isTagged(item.getType());
     }
 
     public static boolean isElytra(@NotNull ItemStack item) {
